# capita_ref

./: .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README  README.md  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/workflows/: release.yml
capita_ref/: cli.py
capita_ref/biblio/: __init__.py  doublecolumn.py  specialchars.py  strategy.py  utils.py
capita_ref/feature/: bibliography.py  publication.py
docs/: index.rst
sections_ref/: __init__.py  cli.py
sections_ref/biblio/: doublecolumn.py  specialchars.py  strategy.py  utils.py
sections_ref/feature/: bibliography.py  publication.py
tests/: __init__.py  conftest.py  test_cli.py
tests/bib/: test_specialchars.py  test_validate.py
tests/bib/expected/: 100_diss128hc  bachelor_bachelor029a  bachelor_bachelor037  bachelor_bachelor051  bachelor_bachelor056  bachelor_bachelor063  bachelor_bachelor076  bachelor_bachelor077  bachelor_bachelor090  bachelor_bachelor111  bachelor_bachelor128  book_book173  diss_diss143  diss_diss167  diss_diss172  diss_diss173  diss_diss266  home_home018  master_master031  master_master049  master_master072  master_master083  master_master091a  master_master098  master_master110  master_master112  master_master116  master_master148  master_master193  paper_paper018
tests/pub/: test_validate.py
tests/pub/expected/: 100_diss128hc  diss_diss173
